--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -33,3 +33,7 @@ jobs:
           examples/namespace.yml
           examples/service.yml
 
+    - name: read updatet files
+      run: |
+        cat examples/namespace.yml
+        cat examples/service.yml
